syntax = "proto3";

package resources;
option go_package = "resources/generated";

import "google/protobuf/timestamp.proto";
import "item.proto";

message User {
  string user_id = 1;
  string first_name = 5;
  string last_name = 6;
  string message = 2;
  google.protobuf.Timestamp timestamp = 3;
  repeated resources.Item items = 4;
  Address address = 7;

  message Address {
    string Street = 1;
    string PostalCode = 2;
    string City = 3;
    string Country = 4;
  }
}